[gd_scene load_steps=17 format=3 uid="uid://d2yvadr2gvw2o"]

[ext_resource type="Script" path="res://scenes/game/mini_games/boulders/boulders.gd" id="1_f1xns"]
[ext_resource type="Texture2D" uid="uid://dyasteg351mgy" path="res://scenes/game/mini_games/boulders/spr_boulders.png" id="2_3rdut"]
[ext_resource type="Texture2D" uid="uid://dqbxmj6d7pr2" path="res://assets/spr_icons_16x16.png" id="2_ixfdo"]
[ext_resource type="AudioStream" uid="uid://dx74balur6fig" path="res://assets/sounds/boulder_cave_in/crush.wav" id="3_qjc0h"]
[ext_resource type="AudioStream" uid="uid://cvx16hjbt15wa" path="res://assets/sounds/win/win sound 2-1.wav" id="4_k731p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hwk8e"]
bg_color = Color(0.188235, 0.129412, 0.176471, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k3b60"]
bg_color = Color(0.188235, 0.129412, 0.176471, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_jg04l"]
atlas = ExtResource("2_ixfdo")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyikh"]
atlas = ExtResource("2_3rdut")
region = Rect2(192, 112, 112, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_f71w7"]
atlas = ExtResource("2_3rdut")
region = Rect2(336, 112, 128, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4oi7"]
atlas = ExtResource("2_3rdut")
region = Rect2(336, 112, 128, 112)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqfff"]
atlas = ExtResource("2_3rdut")
region = Rect2(0, 64, 176, 160)

[sub_resource type="AtlasTexture" id="AtlasTexture_s2773"]
atlas = ExtResource("2_3rdut")
region = Rect2(640, 0, 144, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_dahb6"]
atlas = ExtResource("2_3rdut")
region = Rect2(496, 176, 128, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_f3o00"]
atlas = ExtResource("2_3rdut")
region = Rect2(496, 176, 128, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8smkq"]
atlas = ExtResource("2_3rdut")
region = Rect2(816, 160, 128, 64)

[node name="Boulders2" type="Node2D"]
script = ExtResource("1_f1xns")

[node name="PanelContainer" type="PanelContainer" parent="."]
z_index = 1
clip_contents = true
offset_right = 378.0
offset_bottom = 216.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_hwk8e")

[node name="Title" type="Panel" parent="PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(378, 216)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_k3b60")

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/Title"]
custom_minimum_size = Vector2(378, 216)
layout_mode = 0
offset_right = 80.0
offset_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/Title/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/Title/CenterContainer/HBoxContainer"]
layout_mode = 2
text = "Clear the Path"

[node name="Sprite2D" type="Sprite2D" parent="PanelContainer/Title/CenterContainer/HBoxContainer"]
position = Vector2(113, 5)
texture = SubResource("AtlasTexture_jg04l")
centered = false

[node name="MiniGame" type="Panel" parent="PanelContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(378, 216)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_k3b60")

[node name="Stone2" type="Sprite2D" parent="PanelContainer/MiniGame" groups=["Stones"]]
position = Vector2(128, 40)
texture = SubResource("AtlasTexture_wyikh")

[node name="Area2D" type="Area2D" parent="PanelContainer/MiniGame/Stone2"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PanelContainer/MiniGame/Stone2/Area2D"]
position = Vector2(-16, 9)
polygon = PackedVector2Array(-40, -24, -40, -40, -16, -56, 16, -40, 56, 8, 48, 48, -8, 48, -32, 24)

[node name="Stone8" type="Sprite2D" parent="PanelContainer/MiniGame" groups=["Stones"]]
position = Vector2(288, 72)
texture = SubResource("AtlasTexture_f71w7")

[node name="Area2D" type="Area2D" parent="PanelContainer/MiniGame/Stone8"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PanelContainer/MiniGame/Stone8/Area2D"]
position = Vector2(12, 25)
polygon = PackedVector2Array(-64, 8, -48, -16, 0, -64, 32, -64, 40, 16, 32, 32, -56, 32)

[node name="Stone1" type="Sprite2D" parent="PanelContainer/MiniGame" groups=["Stones"]]
z_index = 1
position = Vector2(104, 96)
texture = SubResource("AtlasTexture_r4oi7")

[node name="Area2D" type="Area2D" parent="PanelContainer/MiniGame/Stone1"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PanelContainer/MiniGame/Stone1/Area2D"]
position = Vector2(9, 16)
polygon = PackedVector2Array(-56, 16, -48, -8, 8, -56, 40, -48, 40, 40, -48, 40)

[node name="Stone10" type="Sprite2D" parent="PanelContainer/MiniGame" groups=["Stones"]]
z_index = 2
position = Vector2(376, 112)
texture = SubResource("AtlasTexture_eqfff")

[node name="Area2D" type="Area2D" parent="PanelContainer/MiniGame/Stone10"]
position = Vector2(-8, 16)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PanelContainer/MiniGame/Stone10/Area2D"]
polygon = PackedVector2Array(-56, -40, -16, -80, 0, -80, 32, -48, 56, -8, 64, 0, 64, 56, -48, 56, -64, 40)

[node name="Stone5" type="Sprite2D" parent="PanelContainer/MiniGame" groups=["Stones"]]
z_index = 2
position = Vector2(208, 32)
texture = SubResource("AtlasTexture_s2773")

[node name="Area2D" type="Area2D" parent="PanelContainer/MiniGame/Stone5"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PanelContainer/MiniGame/Stone5/Area2D"]
position = Vector2(-4, 57)
polygon = PackedVector2Array(-48, 56, 72, 56, 72, 40, 48, 16, 56, 8, 48, -8, 32, -16, 24, -32, 40, -32, 32, -40, 16, -40, 32, -48, 32, -64, 16, -64, 40, -80, 40, -96, 24, -120, 8, -120, 16, -128, 16, -136, 0, -144, -8, -152, -16, -144, -8, -144, -24, -136, -24, -128, -8, -120, -16, -120, -40, -80, -24, -64, -16, -64, -40, -56, -32, -32, -48, -32, -48, -24, -32, -24, -32, -8, -48, 0, -56, 16, -48, 24, -56, 32, -56, 48)

[node name="Stone11" type="Sprite2D" parent="PanelContainer/MiniGame" groups=["Stones"]]
z_index = 2
position = Vector2(8, 64)
texture = SubResource("AtlasTexture_s2773")

[node name="Area2D" type="Area2D" parent="PanelContainer/MiniGame/Stone11"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PanelContainer/MiniGame/Stone11/Area2D"]
position = Vector2(-4, 57)
polygon = PackedVector2Array(-48, 56, 72, 56, 72, 40, 48, 16, 56, 8, 48, -8, 32, -16, 24, -32, 40, -32, 32, -40, 16, -40, 32, -48, 32, -64, 16, -64, 40, -80, 40, -96, 24, -120, 8, -120, 16, -128, 16, -136, 0, -144, -8, -152, -16, -144, -8, -144, -24, -136, -24, -128, -8, -120, -16, -120, -40, -80, -24, -64, -16, -64, -40, -56, -32, -32, -48, -32, -48, -24, -32, -24, -32, -8, -48, 0, -56, 16, -48, 24, -56, 32, -56, 48)

[node name="Stone4" type="Sprite2D" parent="PanelContainer/MiniGame" groups=["Stones"]]
z_index = 3
position = Vector2(96, 120)
texture = SubResource("AtlasTexture_eqfff")

[node name="Area2D" type="Area2D" parent="PanelContainer/MiniGame/Stone4"]
position = Vector2(-8, 16)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PanelContainer/MiniGame/Stone4/Area2D"]
polygon = PackedVector2Array(-56, -40, -16, -80, 0, -80, 32, -48, 56, -8, 64, 0, 64, 56, -48, 56, -64, 40)

[node name="Stone6" type="Sprite2D" parent="PanelContainer/MiniGame" groups=["Stones"]]
z_index = 3
position = Vector2(272, 160)
texture = SubResource("AtlasTexture_dahb6")

[node name="Area2D" type="Area2D" parent="PanelContainer/MiniGame/Stone6"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PanelContainer/MiniGame/Stone6/Area2D"]
position = Vector2(-36, 8)
polygon = PackedVector2Array(-8, -16, 16, -16, 24, 0, 80, 0, 80, 16, -16, 16)

[node name="Stone12" type="Sprite2D" parent="PanelContainer/MiniGame" groups=["Stones"]]
z_index = 4
position = Vector2(320, 168)
texture = SubResource("AtlasTexture_eqfff")

[node name="Area2D" type="Area2D" parent="PanelContainer/MiniGame/Stone12"]
position = Vector2(-8, 16)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PanelContainer/MiniGame/Stone12/Area2D"]
polygon = PackedVector2Array(-56, -40, -16, -80, 0, -80, 32, -48, 56, -8, 64, 0, 64, 56, -48, 56, -64, 40)

[node name="Stone9" type="Sprite2D" parent="PanelContainer/MiniGame" groups=["Stones"]]
z_index = 4
position = Vector2(208, 144)
texture = SubResource("AtlasTexture_wyikh")

[node name="Area2D" type="Area2D" parent="PanelContainer/MiniGame/Stone9"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PanelContainer/MiniGame/Stone9/Area2D"]
position = Vector2(-16, 9)
polygon = PackedVector2Array(-40, -24, -40, -40, -16, -56, 16, -40, 56, 8, 48, 48, -8, 48, -32, 24)

[node name="Stone3" type="Sprite2D" parent="PanelContainer/MiniGame" groups=["Stones"]]
z_index = 4
position = Vector2(56, 192)
texture = SubResource("AtlasTexture_f3o00")

[node name="Area2D" type="Area2D" parent="PanelContainer/MiniGame/Stone3"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PanelContainer/MiniGame/Stone3/Area2D"]
position = Vector2(-33, 9)
polygon = PackedVector2Array(-16, -16, 16, -16, 24, 0, 80, 0, 80, 16, -16, 16)

[node name="Stone7" type="Sprite2D" parent="PanelContainer/MiniGame" groups=["Stones"]]
z_index = 5
position = Vector2(160, 176)
texture = SubResource("AtlasTexture_8smkq")

[node name="Area2D" type="Area2D" parent="PanelContainer/MiniGame/Stone7"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PanelContainer/MiniGame/Stone7/Area2D"]
position = Vector2(5, 11)
polygon = PackedVector2Array(-40, -8, -16, -24, 0, -24, 32, -16, 40, 0, 40, 24, -40, 24, -48, 16)

[node name="BoulderSound1" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_qjc0h")
bus = &"Sound"

[node name="WinSoundPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_k731p")
volume_db = 2.921
pitch_scale = 1.09
bus = &"Sound"
